2010-03-09  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: Add support for DeepLinking. It works
	  for my (trivial) testcases. Basically the only change we
	  appear to need is to change HyperlinkButton to look up
	  UIElements implementing INavigator in the visual tree if the
	  'TargetName' is not one of the known names and then call
	  'Navigate' on it.

2010-03-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MS.Internal.ComAutomation/ComAutomationParam.cs:
	* System.Windows.mdp:
	* Makefile.am: Add new files.

2010-03-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: smcs needs to be executed using the moonlight mono and
	the linker/tuner using the system mono.

2010-03-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Revert accidental changes.

2010-03-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: smcs needs to be executed using the moonlight mono
	and the linker/tuner using the system mono.

2010-03-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Define DEBUG/SANITY when the corresponding configure options
	are specified.

2010-03-01  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: update build files.

2010-02-25  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Add an initial implementation of
	  BindingOperations to get some sites going.

2010-02-23  Mario Carrion  <mcarrion@novell.com>

	* Makefile.am: File added PopupAutomationPeer.
	* System.Windows.Automation.Peers/PopupAutomationPeer.cs: Popup
	AutomationPeer.

2010-02-19  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: Update build files

2010-02-11  Alan McGovern  <amcgovern@novell.com>

	* System.Windows.mdp: Update build files

2010-01-29  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* System.Windows.mdp: Add new files.

2010-02-01  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* System.Windows.mdp: update build files
